--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"MahmoudTheDevu9hi.aternos.me",
-	"port": "28580",
+	"ip":"v88xi.aternos.me",
+	"port": "22503",
 	"name": "NotABot",
 	"auto-night-skip":"true"
 }
